cluster/apps/vimbin/networkpolicies/envoy-gateway-egress-vimbin.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-vimbin
  namespace: network
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: envoy-external
      gateway.envoyproxy.io/owning-gateway-namespace: network
  egress:
    - toEndpoints:
        - matchLabels:
            app: vimbin
            "k8s:io.kubernetes.pod.namespace": vimbin
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
