cluster/apps/vimbin/networkpolicies/ingress-nginx-egress-vimbin.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-vimbin
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: vimbin
            "k8s:io.kubernetes.pod.namespace": vimbin
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
